tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__BlubBlubBlub-AAAAAAAAAAAAAAAAAAAEUg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1106,
  "prerequisites": [
    227
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The brewing stand is really important for brewing the various potions like night vision, healing, haste and jump. Toxic potions or splash potions can be created too. You'll also need it to make a brewery.\n\nWith your basic wand you can finally create one. The recipes can be found on the GTNH page in the Thaumonomicon.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Blub Blub Blub.....",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    227
  ],
  "rewards": [],
  "tasks": []
}
