tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__EnchantingTable1-AAAAAAAAAAAAAAAAAAAETA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1100,
  "prerequisites": [
    256,
    237,
    255
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally, with your new wand with 50 stored vis you're able to build your own enchantment table. The recipe can be found on the GTNH Tab in the Thaumonomicon.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Enchanting Table 1.0",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    256,
    237,
    255
  ],
  "rewards": [],
  "tasks": []
}
